Added platforms and games

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<%= link_to "My Collection", root_path %>
+<%= link_to "Platforms", platforms_path %>
+<%= link_to "Games", games_path %>
+
 <%= yield %>
 
 </body>
