--- a/app/views/platforms/index.html.erb
+++ b/app/views/platforms/index.html.erb
@@ -14,9 +14,9 @@
     <% @platforms.each do |platform| %>
       <tr>
         <td><%= platform.name %></td>
-        <td><%= link_to 'Show', platform %></td>
-        <td><%= link_to 'Edit', edit_platform_path(platform) %></td>
-        <td><%= link_to 'Destroy', platform, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', platform, class: "button small" %></td>
+        <td><%= link_to 'Edit', edit_platform_path(platform), class: "button small" %></td>
+        <td><%= link_to 'Destroy', platform, method: :delete, data: { confirm: 'Are you sure?' }, class: "button small" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Platform', new_platform_path %>
+<%= link_to 'New Platform', new_platform_path, class: "button" %>
